@@ -3,29 +3,36 @@ package faang.school.godbless.registration;
 import lombok.Getter;
 import lombok.Setter;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 @Getter
 @Setter
 public class User {
     private String name;
-    private Integer age;
+    private final Integer age;
     private String work;
     private String address;
-    private static Set<String> VALID_JOBS = new HashSet<>(Arrays.asList("Google", "Uber", "Amazon"));
-    private static Set<String> VALID_ADDRESSES = new HashSet<>(Arrays.asList("London", "New York", "Amsterdam"));
+    private static final Set<String> VALID_JOBS = Set.of("Google", "Uber", "Amazon");
+    private static final Set<String> VALID_ADDRESSES = Set.of("London", "New York", "Amsterdam");
 
     public User(String name, Integer age, String work, String address) {
-        if (name.isEmpty() | age < 18 |
-                !VALID_JOBS.contains(work) | !VALID_ADDRESSES.contains(address)) {
-            throw new IllegalArgumentException();
-        }
+        validate(name, age, work, address);
 
         this.name = name;
         this.age = age;
         this.work = work;
         this.address = address;
+    }
+
+    public void validate(String name, Integer age, String work, String address) {
+        if (name.isEmpty()) {
+            throw new IllegalArgumentException("Имя не может быть пустым");
+        } else if (age < 18) {
+            throw new IllegalArgumentException("Возраст не может быть меньше 18");
+        } else if (!VALID_JOBS.contains(work)) {
+            throw new IllegalArgumentException("Место работы должно содержаться в заданном множестве");
+        } else if (!VALID_ADDRESSES.contains(address)) {
+            throw new IllegalArgumentException("Адрес должен содержаться в заданном множестве");
+        }
     }
 }
